--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img src="./img/patitas item.jpg" alt="">
                 <h3>Imagen</h3>
             </div>
-            <div class="grid-item">
+            <div class="grid-item img-6">
                 <img src="./img/verduras item.jpg" alt="">
                 <h3>Imagen</h3>
             </div>
