--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>"La Única"</h1>
-        <img class="" src="./img/icono.jpeg" alt="">
+        <div class="icono">
+            <img class="" src="./img/icono.jpeg" alt="icono del negocio">
+            <h1 class="nombre-negocio">La Única</h1>
+        </div>
         <nav>
             <!--Listas-->
             <!--Lista Desordenada-->
