--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section class="sobre-nosotros">
             <img src="./img/carniceria.jpg" alt="">
-            <p>Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad. Desde productos frescos como carne y verdura hasta productos de almacen y granja como enlatados, huevos, empanizados y muchos más!</p>
+            <p>Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad. Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados, huevos, empanizados y muchos más!</p>
         </section>
         <section class="productos">
             <h2>Productos Destacados</h2>
