--- a/index.html
+++ b/index.html
@@ -4,29 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!---Bootstrap css-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Carniceria y Verduleria "La Única"</title>
 </head>
 <body>
     <header>
-        <div class="icono">
-            <img class="" src="./img/icono.jpeg" alt="icono del negocio">
-            <h1 class="nombre-negocio">La Única</h1>
-        </div>
-        <nav>
-            <!--Listas-->
-            <!--Lista Desordenada-->
-            <!--Enlaces relativos / Relativos-->
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
-                <li><a href="./pages/servicios.html">Servicios</a></li>
-                <li><a href="./pages/hacetupedido.html">Hace tu pedido</a></li>
-                <li><a href="./pages/dondenosencontramos.html">¿Donde nos encontramos?</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <img src="./img/icono.jpeg" alt="">
+                <a class="navbar-brand" href="#">La Única</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Sobre nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">¿Donde nos encontramos?</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-
     <main>
         <section class="hero">
             <h1 class="subtitulo">Carniceria-Verduleria</h1>
@@ -35,10 +48,12 @@
         </section>
         <section class="sobre-nosotros">
             <img src="./img/carniceria.jpg" alt="">
-            <p>Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad. Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados, huevos, empanizados y muchos más!</p>
+            <p>Somos un negocio donde trabajar con productos naturales de primera calidad, es nuestra mayor prioridad.
+                Desde productos frescos como carnes y verduras hasta productos de almacen y granja como enlatados,
+                huevos, empanizados y muchos más!</p>
         </section>
         <section class="productos">
-            <h2>Productos Destacados</h2>
+            <h2>Servicios</h2>
             <div class="producto-contenedor">
                 <div class="producto-card">
                     <img src="./img/milanesas.jpg" alt="">
@@ -56,7 +71,7 @@
                     <a href="">Agregar</a>
                 </div>
                 <div class="producto-card">
-                    <img src="./img/pechugas-pollo.webp" alt="">
+                    <img src="./img/pechugaspollo.webp" alt="">
                     <h3>Producto 4</h3>
                     <a href="">Agregar</a>
                 </div>
@@ -65,29 +80,30 @@
         <div class="fixed">
             <a href="https://wa.me/+5491121841123"><img src="./img/whatsapp.png" alt=""></a>
         </div>
+        <h4>Productos Destacados</h4>
         <section class="grid-galeria">
             <div class="grid-item">
-                <img src="./img/almacen item.jfif" alt="">
+                <img src="./img/almacenitem.jfif" alt="">
                 <h3>Imagen</h3>
             </div>
             <div class="grid-item img-2">
-                <img src="./img/carbon item.png" alt="">
+                <img src="./img/carbonitem.png" alt="">
                 <h3>Imagen</h3>
             </div>
             <div class="grid-item">
-                <img src="./img/carne item.webp" alt="">
+                <img src="./img/carneitem.webp" alt="">
                 <h3>Imagen</h3>
             </div>
             <div class="grid-item img-4">
-                <img src="./img/pescado item.jpg" alt="">
+                <img src="./img/pescadoitem.jpg" alt="">
                 <h3>Imagen</h3>
             </div>
             <div class="grid-item img-5">
-                <img src="./img/patitas item.jpg" alt="">
+                <img src="./img/patitasitem.jpg" alt="">
                 <h3>Imagen</h3>
             </div>
             <div class="grid-item img-6">
-                <img src="./img/verduras item.jpg" alt="">
+                <img src="./img/verdurasitem.jpg" alt="">
                 <h3>Imagen</h3>
             </div>
         </section>
@@ -95,29 +111,37 @@
 
     <footer>
         <div class="info">
-            <h2>REDES SOCIALES</h2>
-            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="./img/facebook.png" alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="./img/instagram.png" alt="Icono Instagram"></a>
+            <h2>Nuestras redes sociales:</h2>
+            <a href="https://wa.me/+5491121841123"><img src="./img/whatsapp2.png" alt=""></a>
+            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="./img/facebook.png"
+                    alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="./img/instagram.png"
+                    alt="Icono Instagram"></a>
             <div class="contacto">
                 <h3>CONTACTO</h3>
                 <div class="icons">
                     <a href="callto:45459002"><img src="./img/telefono.png" alt="Icono telefono"></a>
-                    <p>4545-9002</p>
                 </div>
                 <div class="icons">
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="./img/email.png" alt="icono email"></a>
-                    <p>milton_xsiempre@hotmail.com</p>
                 </div>
                 <div class="icons">
-                    <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="./img/ubicacion.png" alt="Icono ubicacion"></a>
-                    <p>Saavedra-CABA-Buenos Aires</p>
+                    <a
+                        href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img
+                            src="./img/ubicacion.png" alt="Icono ubicacion"></a>
                 </div>
-                <ul>
-                    
-                </ul>
+            </div>
+            <div class="text-center">
+                <p>Granja-Verdulería La Única</p>
+                <p>Copyright © 2023. Todos los derechos reservados</p>
+                <p>Desarrollado por Gabriel Gonzales</p>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatem.</p>
     </footer>
+    <!--Bootstrap js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
