--- a/pages/dondenosencontramos.html
+++ b/pages/dondenosencontramos.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!---Bootstrap css-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Carniceria y Verduleria "La Única"</title>
 </head>
 
 <body>
-
     <header>
-        <h1>"La Única"</h1>
+        <div class="icono">
+            <a href="../index.html"><img class="" src="../img/icono.jpeg" alt="icono del negocio"></a>
+            <h1 class="nombre-negocio">La Única</h1>
+        </div>
         <nav>
             <!--Listas-->
             <!--Lista Desordenada-->
+            <!--Enlaces relativos / Relativos-->
             <ul>
-                <!--Item de la lista-->
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./sobrenosotros.html">Sobre nosotros</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
                 <li><a href="./hacetupedido.html">Hace tu pedido</a></li>
                 <li><a href="./dondenosencontramos.html">¿Donde nos encontramos?</a></li>
-
+            </ul>
         </nav>
     </header>
 
@@ -49,32 +54,55 @@
                     <input type="text" name="contraseña" id="contraseña" placeholder="Escribe tu contraseña">
                 </div>
             </form>
-
         </section>
         <section>
-
-        </section>
-        <section>
-
-        </section>
+            <h2>¿Dónde nos encontramos?</h2>
         <section>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1522769504513!2d-58.4871560236405!3d-34.54969965464849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6952119a4d7%3A0xd1093a8fcda5473d!2sRuiz%20Huidobro%203643%2C%20C1430CJQ%20CABA!5e0!3m2!1ses!2sar!4v1681855027239!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
+        <div>
+            <p>
+                Dirección: Ruiz Huidobro 3643 (Localidad de Saavedra)
+            </p>
+            <p>
+                Horario de Atención: Lunes a Sabados: (08:30-13:30hs/17:00-20:30hs) Domingo: (09:00-13:30hs)
+            </p>
+            <p>
+                Pedidos al: 45459002
+            </p>
+        </div>
         <div class="fixed">
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
         </div>
     </main>
 
     <footer>
-        <div>
+        <div class="info">
             <h2>REDES SOCIALES</h2>
             <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
             <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
-            <h3>CONTACTO</h3>
-            <ul>
-
-            </ul>
+            <div class="contacto">
+                <h3>CONTACTO</h3>
+                <div class="icons">
+                    <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
+                    <p>4545-9002</p>
+                </div>
+                <div class="icons">
+                    <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
+                    <p>milton_xsiempre@hotmail.com</p>
+                </div>
+                <div class="icons">
+                    <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
+                    <p>Saavedra-CABA-Buenos Aires</p>
+                </div>
+                <ul>
+                    
+                </ul>
+            </div>
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatem.</p>
     </footer>
+    <!--Bootstrap js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
