--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -11,21 +11,32 @@
 </head>
 <body>
     <header>
-        <div class="icono">
-            <a href="../index.html"><img class="" src="../img/icono.jpeg" alt="icono del negocio"></a>
-            <h1 class="nombre-negocio">La Única</h1>
-        </div>
-        <nav>
-            <!--Listas-->
-            <!--Lista Desordenada-->
-            <!--Enlaces relativos / Relativos-->
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./sobrenosotros.html">Sobre nosotros</a></li>
-                <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./hacetupedido.html">Hace tu pedido</a></li>
-                <li><a href="./dondenosencontramos.html">¿Donde nos encontramos?</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <img src="../img/icono.jpeg" alt="">
+                <a class="navbar-brand" href="#">La Única</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos encontramos?</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
