--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <img src="./img/icono.jpeg" alt="">
-                <a class="navbar-brand" href="#">La Única</a>
+                <a href="./index.html"><img src="./img/icono.jpeg" alt=""></a>
+                <a class="navbar-brand" href="./index.html">La Única</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -26,16 +26,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="">Sobre nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="./pages/sobrenosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="">Servicios</a>
+                            <a class="nav-link active" aria-current="page" href="./pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="">¿Donde nos encontramos?</a>
+                            <a class="nav-link active" aria-current="page" href="./pages/dondenosencontramos.html">¿Donde nos encontramos?</a>
                         </li>
                     </ul>
                 </div>
