--- a/pages/hacetupedido.html
+++ b/pages/hacetupedido.html
@@ -14,11 +14,11 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <img src="../img/icono.jpeg" alt="">
-                <a class="navbar-brand" href="#">La Única</a>
+                <a href="../index.html"><img src="../img/icono.jpeg" alt=""></a>
+                <a class="navbar-brand" href="../index.html">La Única</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
