--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -40,8 +40,8 @@
         </nav>
     </header>
     <main>
-        <h1>Sobre Nosotros</h1>
         <section class="quienessomos">
+            <h1>Sobre Nosotros</h1>
             <h2>¿Quiénes somos?</h2>
             <img src="../img/carniceria.jpg" alt="">
             <p>Somos un negocio familiar de Granja, Verdulería y Carnicería ubicado en el barrio de Saavedra, Capital Federal. Estamos atendiendo al público desde el año 2016 donde al principio empezamos con lo que era solo un negocio de Verduleria, y donde poco a poco fuimos expandiendolo a Granja y Carnicería. Y lo que hoy en día es un negocio de Almacén también. Negocio totalmente atendido por los dueños y empleados de lunes a domingo. Siempre dispuestos a atenderlo con la mayor paciencia y amabalidad que pudiese esperar.</p>
@@ -55,32 +55,32 @@
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
         </div>
     </main>
-
     <footer>
         <div class="info">
-            <h2>REDES SOCIALES</h2>
-            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <h2>Nuestras redes sociales:</h2>
+            <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp2.png" alt=""></a>
+            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png"
+                    alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png"
+                    alt="Icono Instagram"></a>
             <div class="contacto">
-                <h3>CONTACTO</h3>
+                <h3>Contacto</h3>
                 <div class="icons">
                     <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
-                    <p>4545-9002</p>
                 </div>
                 <div class="icons">
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
-                    <p>milton_xsiempre@hotmail.com</p>
                 </div>
                 <div class="icons">
                     <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
-                    <p>Saavedra-CABA-Buenos Aires</p>
                 </div>
-                <ul>
-                    
-                </ul>
+            </div>
+            <div class="text-center">
+                <p>Granja-Verdulería La Única</p>
+                <p>Copyright © 2023. Todos los derechos reservados</p>
+                <p>Desarrollado por Gabriel Gonzales</p>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatem.</p>
     </footer>
     <!--Bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
