--- a/pages/dondenosencontramos.html
+++ b/pages/dondenosencontramos.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Carniceria y Verduleria "La Única"</title>
 </head>
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -40,10 +39,10 @@
             </div>
         </nav>
     </header>
-
     <main>
-        <section>
-            <h2>CREAR CUENTA</h2>
+        <section class="dondenosencontramos">
+            <h1>¿Dónde nos encontramos?</h1>
+            <h2>Crear Cuenta</h2>
             <form action="">
                 <div>
                     <label for="nombre">Nombre</label>
@@ -54,7 +53,7 @@
                     <input type="text" name="apellido" id="apellido" placeholder="Escribe tu apellido">
                 </div>
             </form>
-            <h3>INICIAR SESIÓN</h3>
+            <h3>Iniciar Sesion</h3>
             <form action="">
                 <div>
                     <label for="email">Email</label>
@@ -67,8 +66,7 @@
             </form>
         </section>
         <section>
-            <h2>¿Dónde nos encontramos?</h2>
-        <section>
+            <h2>Negocio</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1522769504513!2d-58.4871560236405!3d-34.54969965464849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6952119a4d7%3A0xd1093a8fcda5473d!2sRuiz%20Huidobro%203643%2C%20C1430CJQ%20CABA!5e0!3m2!1ses!2sar!4v1681855027239!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <div>
@@ -86,32 +84,32 @@
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
         </div>
     </main>
-
     <footer>
         <div class="info">
-            <h2>REDES SOCIALES</h2>
-            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <h2>Nuestras redes sociales:</h2>
+            <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp2.png" alt=""></a>
+            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png"
+                    alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png"
+                    alt="Icono Instagram"></a>
             <div class="contacto">
-                <h3>CONTACTO</h3>
+                <h3>Contacto</h3>
                 <div class="icons">
                     <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
-                    <p>4545-9002</p>
                 </div>
                 <div class="icons">
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
-                    <p>milton_xsiempre@hotmail.com</p>
                 </div>
                 <div class="icons">
                     <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
-                    <p>Saavedra-CABA-Buenos Aires</p>
                 </div>
-                <ul>
-                    
-                </ul>
+            </div>
+            <div class="text-center">
+                <p>Granja-Verdulería La Única</p>
+                <p>Copyright © 2023. Todos los derechos reservados</p>
+                <p>Desarrollado por Gabriel Gonzales</p>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatem.</p>
     </footer>
     <!--Bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
