--- a/pages/hacetupedido.html
+++ b/pages/hacetupedido.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Carniceria y Verduleria "La Única"</title>
 </head>
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -40,47 +39,66 @@
             </div>
         </nav>
     </header>
-
     <main>
-        <section>
-
+        <section class="hacetupedido">
+            <h1>Hace tu pedido</h1>
         </section>
         <section>
+            <form class="form">
+                <h2 class="formtitle">Iniciar Sesión</h2>
+                <p class="form-paraghraph">¿No estás registrado? <a href="#" class="form-link">Entra acá</a></p>
+                <div class="form-container">
+                    <div class="form-group">
+                        <input type="text" id="name" class="form-imput" placeholder=" ">
+                        <label for="name" class="form-label">Nombre</label>
+                        <span class="form-line"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" id="user" class="form-imput" placeholder=" ">
+                        <label for="user" class="form-label">Usuario</label>
+                        <span class="form-line"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" id="password" class="form-imput" placeholder=" ">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <span class="form-line"></span>
+                    </div>
+                    <input type="submit" class="form-submit" value="Entrar">
+                </div>
+            </form>
 
-        </section>
-        <section>
-
+            </form>
         </section>
         <div class="fixed">
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
         </div>
     </main>
-
     <footer>
         <div class="info">
-            <h2>REDES SOCIALES</h2>
-            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png" alt="Icono Facebook"></a>
-            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png" alt="Icono Instagram"></a>
+            <h2>Nuestras redes sociales:</h2>
+            <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp2.png" alt=""></a>
+            <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png"
+                    alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png"
+                    alt="Icono Instagram"></a>
             <div class="contacto">
-                <h3>CONTACTO</h3>
+                <h3>Contacto</h3>
                 <div class="icons">
                     <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
-                    <p>4545-9002</p>
                 </div>
                 <div class="icons">
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
-                    <p>milton_xsiempre@hotmail.com</p>
                 </div>
                 <div class="icons">
                     <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
-                    <p>Saavedra-CABA-Buenos Aires</p>
                 </div>
-                <ul>
-                    
-                </ul>
+            </div>
+            <div class="text-center">
+                <p>Granja-Verdulería La Única</p>
+                <p>Copyright © 2023. Todos los derechos reservados</p>
+                <p>Desarrollado por Gabriel Gonzales</p>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatem.</p>
     </footer>
     <!--Bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
