--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -41,104 +41,115 @@
         </nav>
     </header>
     <main>
-        <section class="servicios">
-            <ul>
-                <li><a href="./granja.html">Granja</a></li>
-                <li><a href="./carniceria.html">Carniceria</a></li>
-                <li><a href="./verduleria.html">Verduleria</a></li>
-                <li><a href="./almacen.html">Almacén</a></li>
-            </ul>
+        <section class="servicios1">
+            <h1>Servicios</h1>
+            <section class="servicios">
+                <ul>
+                    <li><a href="./granja.html">Granja</a></li>
+                    <li><a href="./carniceria.html">Carniceria</a></li>
+                    <li><a href="./verduleria.html">Verduleria</a></li>
+                    <li><a href="./almacen.html">Almacén</a></li>
+                </ul>
+            </section>
         </section>
-        <section class="granja">
+        <section class="catalogo">
             <h2>Granja</h2>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 1</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 2</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 3</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 4</h3>
-                <a href="">Agregar</a></img>
+            <div class="producto-contenedor">
+                <div class="producto-card">
+                    <img src="../img/pechugapollo2.png" alt="">
+                    <h3>Producto 1</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/milanesas2.jpg" alt="">
+                    <h3>Producto 2</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/huevos2.jpg" alt="">
+                    <h3>Producto 3</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/salchichasviena.jpg" alt="">
+                    <h3>Producto 4</h3>
+                    <a href="">Agregar</a></img>
+                </div>
             </div>
         </section>
-        <section class="carniceria">
+        <section class="catalogo">
             <h2>Carniceria</h2>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 1</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 2</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Procuto 3</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 4</h3>
-                <a href="">Agregar</a></img>
+            <div class="producto-contenedor">
+                <div class="producto-card">
+                    <img src="../img/bifeancho.jpeg" alt="">
+                    <h3>Producto 1</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/carre.jpeg" alt="">
+                    <h3>Producto 2</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/tiraasado.webp" alt="">
+                    <h3>Producto 3</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/matambre.webp" alt="">
+                    <h3>Producto 4</h3>
+                    <a href="">Agregar</a></img>
+                </div>
             </div>
         </section>
-        <section class="verduleria">
+        <section class="catalogo">
             <h2>Verduleria</h2>
-            <div>
-                <img src="" alt="">
-                <h3>Procuto 1</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 2</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 3</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 4</h3>
-                <a href="">Agregar</a></img>
+            <div class="producto-contenedor">
+                <div class="producto-card">
+                    <img src="../img/lechugafrancesa.jpeg" alt="">
+                    <h3>Procuto 1</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/morronrojo.jpeg" alt="">
+                    <h3>Producto 2</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/zukini.jpeg" alt="">
+                    <h3>Producto 3</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/cherry.jpeg" alt="">
+                    <h3>Producto 4</h3>
+                    <a href="">Agregar</a></img>
+                </div>
             </div>
         </section>
-        <section class="almacen">
+        <section class="catalogo">
             <h2>Almacen</h2>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 1</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 2</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 3</h3>
-                <a href="">Agregar</a></img>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>Producto 4</h3>
-                <a href="">Agregar</a></img>
+            <div class="producto-contenedor">
+                <div class="producto-card">
+                    <img src="../img/aceite.webp" alt="">
+                    <h3>Producto 1</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/atun.webp" alt="">
+                    <h3>Producto 2</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/cafe.webp" alt="">
+                    <h3>Producto 3</h3>
+                    <a href="">Agregar</a></img>
+                </div>
+                <div class="producto-card">
+                    <img src="../img/mayonesa.webp" alt="">
+                    <h3>Producto 4</h3>
+                    <a href="">Agregar</a></img>
+                </div>
             </div>
         </section>
         <div class="fixed">
@@ -147,36 +158,32 @@
     </main>
     <footer>
         <div class="info">
-            <h2>REDES SOCIALES</h2>
+            <h2>Nuestras redes sociales:</h2>
+            <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp2.png" alt=""></a>
             <a href="https://www.facebook.com/milton.giovanni.7" target="_blank"><img src="../img/facebook.png"
                     alt="Icono Facebook"></a>
             <a href="https://www.instagram.com/miltokis/" target="_blank"><img src="../img/instagram.png"
                     alt="Icono Instagram"></a>
             <div class="contacto">
-                <h3>CONTACTO</h3>
+                <h3>Contacto</h3>
                 <div class="icons">
                     <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
-                    <p>4545-9002</p>
                 </div>
                 <div class="icons">
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
-                    <p>milton_xsiempre@hotmail.com</p>
                 </div>
                 <div class="icons">
-                    <a
-                        href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img
-                            src="../img/ubicacion.png" alt="Icono ubicacion"></a>
-                    <p>Saavedra-CABA-Buenos Aires</p>
+                    <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
                 </div>
-                <ul>
-
-                </ul>
+            </div>
+            <div class="text-center">
+                <p>Granja-Verdulería La Única</p>
+                <p>Copyright © 2023. Todos los derechos reservados</p>
+                <p>Desarrollado por Gabriel Gonzales</p>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, voluptatem.</p>
     </footer>
     <!--Bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
