--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -43,13 +43,17 @@
         <section class="quienessomos">
             <h1>Sobre Nosotros</h1>
             <h2>¿Quiénes somos?</h2>
+        </section>
+        <section class="info-nos">
             <img src="../img/carniceria.jpg" alt="">
             <p>Somos un negocio familiar de Granja, Verdulería y Carnicería ubicado en el barrio de Saavedra, Capital Federal. Estamos atendiendo al público desde el año 2016 donde al principio empezamos con lo que era solo un negocio de Verduleria, y donde poco a poco fuimos expandiendolo a Granja y Carnicería. Y lo que hoy en día es un negocio de Almacén también. Negocio totalmente atendido por los dueños y empleados de lunes a domingo. Siempre dispuestos a atenderlo con la mayor paciencia y amabalidad que pudiese esperar.</p>
         </section>
         <section class="comotrabajamos">
             <h2>¿Cómo trabajamos?</h2>
-            <img src="../img/frutas.jpeg" alt="">
+        </section>
+        <section class="info-nos">
             <p>Nuestra mayor prioridad es la de trabajar con productos de primera calidad como nuestro pollo con su marca reconocida llamada "Calisa", huevos frescos, carne de ternera, verduras y frutas de primera calidad recién llegadas del mercado central por la madrugada, merluza fresca entregada solo los martes con stock limitado, almacén con un poco de todo, hamburguesas de pollo y carne hechas con productos y condimentos naturales, con muy poca grasa. Y por ultimo pero no menos importante, nuestras famosas milanesas tan pedidas y queridas por los clientes, hechas al momento y con productos frescos.</p>
+            <img src="../img/frutas.jpeg" alt="">
         </section>
         <div class="fixed">
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
