--- a/pages/dondenosencontramos.html
+++ b/pages/dondenosencontramos.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---Bootstrap css-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Carniceria y Verduleria "La Única"</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -16,8 +19,8 @@
                 <a href="../index.html"><img src="../img/icono.jpeg" alt=""></a>
                 <a class="navbar-brand" href="../index.html">La Única</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -26,13 +29,15 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre
+                                nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos encontramos?</a>
+                            <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos
+                                encontramos?</a>
                         </li>
                     </ul>
                 </div>
@@ -42,44 +47,43 @@
     <main>
         <section class="dondenosencontramos">
             <h1>¿Dónde nos encontramos?</h1>
-            <h2>Crear Cuenta</h2>
-            <form action="">
-                <div>
-                    <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre">
-                </div>
-                <div>
-                    <label for="apellido">Apellido</label>
-                    <input type="text" name="apellido" id="apellido" placeholder="Escribe tu apellido">
-                </div>
-            </form>
-            <h3>Iniciar Sesion</h3>
-            <form action="">
-                <div>
-                    <label for="email">Email</label>
-                    <input type="text" name="email" id="email" placeholder="Escribe tu mail">
-                </div>
-                <div>
-                    <label for="contraseña">Contraseña</label>
-                    <input type="text" name="contraseña" id="contraseña" placeholder="Escribe tu contraseña">
-                </div>
-            </form>
         </section>
-        <section>
-            <h2>Negocio</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1522769504513!2d-58.4871560236405!3d-34.54969965464849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6952119a4d7%3A0xd1093a8fcda5473d!2sRuiz%20Huidobro%203643%2C%20C1430CJQ%20CABA!5e0!3m2!1ses!2sar!4v1681855027239!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="donde2">
+            <div class="form-account">
+                <h2>Crear Cuenta</h2>
+                <form action="">
+                    <div>
+                        <label for="nombre">Nombre</label>
+                        <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre">
+                    </div>
+                    <div>
+                        <label for="apellido">Apellido</label>
+                        <input type="text" name="apellido" id="apellido" placeholder="Escribe tu apellido">
+                    </div>
+                </form>
+                    <h3>Iniciar Sesion</h3>
+                <form action="">
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="Escribe tu mail">
+                    </div>
+                    <div>
+                        <label for="contraseña">Contraseña</label>
+                        <input type="text" name="contraseña" id="contraseña" placeholder="Escribe tu contraseña">
+                    </div>
+                </form>
+            </div>
+            <div class="ubicacion">
+                <h2>Negocio</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1522769504513!2d-58.4871560236405!3d-34.54969965464849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6952119a4d7%3A0xd1093a8fcda5473d!2sRuiz%20Huidobro%203643%2C%20C1430CJQ%20CABA!5e0!3m2!1ses!2sar!4v1681855027239!5m2!1ses!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <p>Dirección: Ruiz Huidobro 3643 (Localidad de Saavedra)</p>
+                    <p>Horario de Atención: Lunes a Sabados: (08:30-13:30hs/17:00-20:30hs) Domingo: (09:00-13:30hs)</p>
+                    <p>Pedidos al: 45459002</p>
+            </div>
         </section>
-        <div>
-            <p>
-                Dirección: Ruiz Huidobro 3643 (Localidad de Saavedra)
-            </p>
-            <p>
-                Horario de Atención: Lunes a Sabados: (08:30-13:30hs/17:00-20:30hs) Domingo: (09:00-13:30hs)
-            </p>
-            <p>
-                Pedidos al: 45459002
-            </p>
-        </div>
         <div class="fixed">
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
         </div>
@@ -101,7 +105,9 @@
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
                 </div>
                 <div class="icons">
-                    <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
+                    <a
+                        href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img
+                            src="../img/ubicacion.png" alt="Icono ubicacion"></a>
                 </div>
             </div>
             <div class="text-center">
@@ -112,6 +118,9 @@
         </div>
     </footer>
     <!--Bootstrap js-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
