--- a/index.html
+++ b/index.html
@@ -26,18 +26,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./pages/sobrenosotros.html">Sobre
-                                nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="./pages/sobrenosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                                href="./pages/dondenosencontramos.html">¿Donde nos encontramos?</a>
+                            <a class="nav-link active" aria-current="page" href="./pages/hacetupedido.html">Hace tu pedido</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/dondenosencontramos.html">¿Donde nos encontramos?</a>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +59,7 @@
                         <div class=" d-flex carousel-caption top-0 mt-4">
                             <p class="mt-5 fs-3 text-uppercase">Carniceria-Verduleria</p>
                             <h1 class="display-1 fw-bolder text-capitalize">La Única</h1>
-                            <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Hace tu pedido</button>
+                            <button class="btn"><a href="./pages/hacetupedido.html">Hace tu pedido</a></button>
                         </div>
                     </div>
                     <div class="carousel-item d-item">
@@ -69,14 +67,14 @@
                         <div class="d-flex carousel-caption top-0 mt-4">
                             <p class="mt-5 fs-3 text-uppercase">Carniceria-Verduleria</p>
                             <h1 class="display-1 fw-bolder text-capitalize">La Única</h1>
-                            <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Hace tu pedido</button>
+                            <button class="btn"><a href="./pages/hacetupedido.html">Hace tu pedido</a></button>
                         </div>
                     </div><div class="carousel-item d-item">
                         <img src="./img/frutas.jpeg" class="d-block w-100 d-img" alt="slider 1">
                         <div class="d-flex carousel-caption top-0 mt-4">
                             <p class="mt-5 fs-3 text-uppercase">Carniceria-Verduleria</p>
                             <h1 class="display-1 fw-bolder text-capitalize">La Única</h1>
-                            <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Hace tu pedido</button>
+                            <button class="btn"><a href="./pages/hacetupedido.html">Hace tu pedido</a></button>
                         </div>
                     </div>
                 </div>
