--- a/pages/dondenosencontramos.html
+++ b/pages/dondenosencontramos.html
@@ -26,18 +26,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre
-                                nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos
-                                encontramos?</a>
+                            <a class="nav-link active" aria-current="page" href="./hacetupedido.html">Hace tu pedido</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos encontramos?</a>
                         </li>
                     </ul>
                 </div>
@@ -50,26 +48,26 @@
         </section>
         <section class="donde2">
             <div class="form-account">
-                <h2>Crear Cuenta</h2>
-                <form action="">
-                    <div>
-                        <label for="nombre">Nombre</label>
-                        <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre">
-                    </div>
-                    <div>
-                        <label for="apellido">Apellido</label>
-                        <input type="text" name="apellido" id="apellido" placeholder="Escribe tu apellido">
-                    </div>
-                </form>
-                    <h3>Iniciar Sesion</h3>
-                <form action="">
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="text" name="email" id="email" placeholder="Escribe tu mail">
-                    </div>
-                    <div>
-                        <label for="contraseña">Contraseña</label>
-                        <input type="text" name="contraseña" id="contraseña" placeholder="Escribe tu contraseña">
+                <form class="form">
+                    <h2 class="form-title">Iniciar Sesión</h2>
+                    <p class="form-paraghrap">¿No estás registrado? <a href="#" class="form-link">Entra acá</a></p>
+                    <div class="form-container">
+                        <div class="form-group">
+                            <input type="text" id="name" class="form-imput" placeholder=" ">
+                            <label for="name" class="form-label">Nombre</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="user" class="form-imput" placeholder=" ">
+                            <label for="user" class="form-label">Usuario</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="password" class="form-imput" placeholder=" ">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <input type="submit" class="form-submit" value="Entrar">
                     </div>
                 </form>
             </div>
@@ -77,11 +75,11 @@
                 <h2>Negocio</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1522769504513!2d-58.4871560236405!3d-34.54969965464849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6952119a4d7%3A0xd1093a8fcda5473d!2sRuiz%20Huidobro%203643%2C%20C1430CJQ%20CABA!5e0!3m2!1ses!2sar!4v1681855027239!5m2!1ses!2sar"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <p>Dirección: Ruiz Huidobro 3643 (Localidad de Saavedra)</p>
-                    <p>Horario de Atención: Lunes a Sabados: (08:30-13:30hs/17:00-20:30hs) Domingo: (09:00-13:30hs)</p>
-                    <p>Pedidos al: 45459002</p>
+                    <p><strong>Dirección:</strong> Ruiz Huidobro 3643 (Localidad de Saavedra)</p>
+                    <p><strong>Pedidos al:</strong> (+54) 11 4545-9002</p>
+                    <p><strong>Horario de Atención:</strong> Lunes a Sabados: 8:30-13:30/17:00-20:30 Domingo: 9:00-13:30</p>
             </div>
         </section>
         <div class="fixed">
@@ -99,7 +97,7 @@
             <div class="contacto">
                 <h3>Contacto</h3>
                 <div class="icons">
-                    <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
+                    <a href="tel:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
                 </div>
                 <div class="icons">
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
