--- a/pages/hacetupedido.html
+++ b/pages/hacetupedido.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---Bootstrap css-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Carniceria y Verduleria "La Única"</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -16,20 +19,20 @@
                 <a href="../index.html"><img src="../img/icono.jpeg" alt=""></a>
                 <a class="navbar-brand" href="../index.html">La Única</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./hacetupedido.html">Hace tu pedido</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos encontramos?</a>
@@ -43,31 +46,49 @@
         <section class="hacetupedido">
             <h1>Hace tu pedido</h1>
         </section>
-        <section>
-            <form class="form">
-                <h2 class="formtitle">Iniciar Sesión</h2>
-                <p class="form-paraghraph">¿No estás registrado? <a href="#" class="form-link">Entra acá</a></p>
-                <div class="form-container">
-                    <div class="form-group">
-                        <input type="text" id="name" class="form-imput" placeholder=" ">
-                        <label for="name" class="form-label">Nombre</label>
-                        <span class="form-line"></span>
+        <section class="hacetupedido2">
+            <div class="form-account">
+                <form class="form">
+                    <div class="form-container">
+                        <div class="form-group">
+                            <input type="text" id="name" class="form-imput" placeholder=" ">
+                            <label for="name" class="form-label">Nombre</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="apellido" class="form-imput" placeholder=" ">
+                            <label for="apellido" class="form-label">Apellido</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="mail" class="form-imput" placeholder=" ">
+                            <label for="mail" class="form-label">Mail</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="telefono" class="form-imput" placeholder=" ">
+                            <label for="telefono" class="form-label">Telefono</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" id="direccion" class="form-imput" placeholder=" ">
+                            <label for="direccion" class="form-label">Dirección</label>
+                            <span class="form-line"></span>
+                        </div>
+                        <input type="submit" class="form-submit" value="Entrar">
                     </div>
-                    <div class="form-group">
-                        <input type="text" id="user" class="form-imput" placeholder=" ">
-                        <label for="user" class="form-label">Usuario</label>
-                        <span class="form-line"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" id="password" class="form-imput" placeholder=" ">
-                        <label for="password" class="form-label">Contraseña</label>
-                        <span class="form-line"></span>
-                    </div>
-                    <input type="submit" class="form-submit" value="Entrar">
-                </div>
-            </form>
-
-            </form>
+                </form>
+            </div>
+            <div class="ubicacion">
+                <h2>Negocio:</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1522769504513!2d-58.4871560236405!3d-34.54969965464849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb6952119a4d7%3A0xd1093a8fcda5473d!2sRuiz%20Huidobro%203643%2C%20C1430CJQ%20CABA!5e0!3m2!1ses!2sar!4v1681855027239!5m2!1ses!2sar"
+                    width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p><strong>Dirección:</strong> Ruiz Huidobro 3643 (Localidad de Saavedra)</p>
+                <p><strong>Pedidos al:</strong>(+54) 11 4545-9002</p>
+                <p><strong>Horario de Atención:</strong> Lunes a Sabados: 8:30-13:30/17:00-20:30 Domingo: 9:00-13:30</p>
+            </div>
         </section>
         <div class="fixed">
             <a href="https://wa.me/+5491121841123"><img src="../img/whatsapp.png" alt=""></a>
@@ -84,13 +105,15 @@
             <div class="contacto">
                 <h3>Contacto</h3>
                 <div class="icons">
-                    <a href="callto:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
+                    <a href="tel:45459002"><img src="../img/telefono.png" alt="Icono telefono"></a>
                 </div>
                 <div class="icons">
                     <a href="mailto:milton_xsiempre@hotmail.com"><img src="../img/email.png" alt="icono email"></a>
                 </div>
                 <div class="icons">
-                    <a href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img src="../img/ubicacion.png" alt="Icono ubicacion"></a>
+                    <a
+                        href="https://www.google.com/maps/place/Ruiz+Huidobro+3643,+C1430CJQ+CABA/@-34.5497039,-58.4845815,17z/data=!4m6!3m5!1s0x95bcb6952119a4d7:0xd1093a8fcda5473d!8m2!3d-34.5497039!4d-58.4845815!16s%2Fg%2F11fl8mfdfq?authuser=0"><img
+                            src="../img/ubicacion.png" alt="Icono ubicacion"></a>
                 </div>
             </div>
             <div class="text-center">
@@ -101,6 +124,9 @@
         </div>
     </footer>
     <!--Bootstrap js-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
