--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -24,13 +24,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./hacetupedido.html">Hace tu pedido</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos encontramos?</a>
@@ -45,14 +45,14 @@
             <h1>Servicios</h1>
             <section class="servicios">
                 <ul>
-                    <li><a href="./granja.html">Granja</a></li>
-                    <li><a href="./carniceria.html">Carniceria</a></li>
-                    <li><a href="./verduleria.html">Verduleria</a></li>
-                    <li><a href="./almacen.html">Almacén</a></li>
+                    <li><a href="#granja">Granja</a></li>
+                    <li><a href="#carniceria">Carniceria</a></li>
+                    <li><a href="#verduleria">Verduleria</a></li>
+                    <li><a href="#almacen">Almacén</a></li>
                 </ul>
             </section>
         </section>
-        <section class="catalogo">
+        <section id="granja" class="catalogo">
             <h2>Granja</h2>
             <div class="producto-contenedor">
                 <div class="producto-card">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalogo">
+        <section id="carniceria" class="catalogo">
             <h2>Carniceria</h2>
             <div class="producto-contenedor">
                 <div class="producto-card">
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalogo">
+        <section id="verduleria" class="catalogo">
             <h2>Verduleria</h2>
             <div class="producto-contenedor">
                 <div class="producto-card">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalogo">
+        <section id="almacen" class="catalogo">
             <h2>Almacen</h2>
             <div class="producto-contenedor">
                 <div class="producto-card">
