--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -23,13 +23,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./sobrenosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./hacetupedido.html">Hace tu pedido</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./dondenosencontramos.html">¿Donde nos encontramos?</a>
